# bazel

./: .bazeliskrc  .bazelrc  BUILD  BUILD.bazel  Jenkinsfile  MODULE.bazel  README.md  deploy.yaml
