module(
    name = "fleetman-api-gateway",
    version = "0.0.1",
    compatibility_level = 1,
)


bazel_dep(name = "rules_java", version = "5.5.0")  # version known to work

# Register JDK 17 toolchain
java = use_extension("@rules_java//java:extensions.bzl", "java")
java.register_toolchains(
    name = "remotejdk17",
    java_version = "17",
)
use_repo(java, "remotejdk17")





# Add rules_jvm_external for managing Maven dependencies
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.0.1",  # Spring Boot Web
        "org.springframework.boot:spring-boot-starter-test:3.0.1",  # Spring Boot Test (test scope)
        "org.springframework.cloud:spring-cloud-starter-openfeign:3.0.1",  # OpenFeign (aligned with Spring Boot 3.0.1)
        "javax.xml.bind:jaxb-api:2.3.1",  # JAXB API
        "junit:junit:4.11",  # JUnit (test scope)
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    strict_visibility = True,
)

use_repo(maven, "maven")